2000-01-24  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/swriteheaders.c, transports/libta/fwriteheaders.c:
	    Do proper TAB-expand in entire header strings, if so directed.

	* utils/mxverify/*
	    Made it as stand-alone as possible; it still uses ZMailer's
	    configuration system, but does not need rest of the system
	    for compilation -- all parts it needs are localized copies.

	* transports/smtp/smtptls.c:
	    smtp_sfwrite() didn't break out at write-timeout quite
	    as I had intended..

	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
	    More debug stuff for hunting strance message breaks..

2000-01-23  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/token.c, router/rfc822hdrs.c:
	    Turn all header start spaces to optimized TABs plus spaces.

	* smtpserver/smtpcmds.c:
	    Now (!) people tell me that the most common
	    M$ email clients are absolutely stupid, and won't be able
	    to correlate outgoing SMTP verbs to responses they receive.
	    They just tell to user the error which Z returns, and as
	    it doesn't repeat the address in fault (why should it?),
	    user has no clue...
	    (So the one-line reports will from now on also mention the
	     received address...)

	* utils/mxverify/Makefile.in, utils/mxverify/mxverify-cgi.c,
	  utils/mxverify/mxverify-cgi.html, utils/Makefile.in,
	  utils/mxverify-cgi.c, utils/mxverify-cgi.html
	    Moved the thing to subdirectory.
	    Now it can be compiled without compiling the *entire*
	    other ZMailer -- just:
		./configure --prefix=/usr
		cd utils/mxverify ; make

2000-01-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/listexpand.c:
	    Added parametrization on how large bundles to make.
	    Default is the same old 200..

	* transports/smtp/smtp.c:
	    Turned out that Linux glibc 2.1 getaddrinfo() has some
	    strange bugs when it is left to its devices to scan for
	    a generic address suite -- it doesn't scan only IPv4 and