@@ -1,3 +1,9 @@
+2000-01-25  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* transports/smtp/smtp.c, transports/smtp/appendlet.c:
+	    Small error test rearrangements so that if  sferror()
+	    is set at the output stream, no writing will happen.
+
 2000-01-24  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* transports/libta/swriteheaders.c, transports/libta/fwriteheaders.c:
